; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_mcp23s08.c_mcp23s08_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_mcp23s08.c_mcp23s08_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mcp23s08 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mcp23s08*, i32)* @mcp23s08_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mcp23s08_read(%struct.mcp23s08* %0, i32 %1) #0 {
  %3 = alloca %struct.mcp23s08*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [2 x i32], align 4
  %6 = alloca [1 x i32], align 4
  %7 = alloca i32, align 4
  store %struct.mcp23s08* %0, %struct.mcp23s08** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.mcp23s08*, %struct.mcp23s08** %3, align 8
  %9 = getelementptr inbounds %struct.mcp23s08, %struct.mcp23s08* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = or i32 %10, 1
  %12 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* %4, align 4
  %14 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 1
  store i32 %13, i32* %14, align 4
  %15 = load %struct.mcp23s08*, %struct.mcp23s08** %3, align 8
  %16 = getelementptr inbounds %struct.mcp23s08, %struct.mcp23s08* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %19 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %20 = call i32 @spi_write_then_read(i32 %17, i32* %18, i32 8, i32* %19, i32 4)
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* %7, align 4
  br label %28

25:                                               ; preds = %2
  %26 = getelementptr inbounds [1 x i32], [1 x i32]* %6, i64 0, i64 0
  %27 = load i32, i32* %26, align 4
  br label %28

28:                                               ; preds = %25, %23
  %29 = phi i32 [ %24, %23 ], [ %27, %25 ]
  ret i32 %29
}

declare dso_local i32 @spi_write_then_read(i32, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
